[package]
edition = "2021"
name = "hotel-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "^0.37", features = ["full"] }
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
urlencoding = "1.1.1"
